refactor: business service, entity, dto
