# src/dtos/business/Business.dto.ts
@@ -8,7 +8,7 @@ import {
   IsUrl,
 } from "class-validator";
 
-import { BusinessCategory } from "../../entities/business/Business.entity";
+import { BusinessCategory, VisibilityStatus } from "../../entities/business/Business.entity";
 import { User } from "../../entities/user/User.entity";
 
 export class SocialHandlesDTO {
@@ -65,7 +65,7 @@ export class AddressDTO {
 export class CreateBusinessDTO {
   @IsString()
   @IsNotEmpty()
-  name: string;
+  businessName: string;
 
   @IsOptional()
   @IsString()
@@ -98,7 +98,7 @@ export class CreateBusinessDTO {
 
   @IsString()
   @IsNotEmpty()
-  registrationDocumentId: string;
+  businessRegistrationDocument: string;
 
   @IsNotEmpty()
   logo: string;
@@ -106,8 +106,15 @@ export class CreateBusinessDTO {
   @IsNotEmpty()
   coverImage: string;
 
-  @IsNotEmpty()
-  owner: User;
+
+  @IsOptional()
+  visibility: {
+    status: VisibilityStatus,
+    remarks: string
+  }
+
+  // @IsNotEmpty()
+  // owner: User;
 
   @IsOptional()
   @Object(() => SocialHandlesDTO)
